--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 </p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi distinctio voluptates quidem nam, recusandae minus excepturi libero earum sit ipsa suscipit voluptate possimus porro consequatur neque. Facere quisquam atque laborum.</p>
                 
-                <a type="button" onclick="window.location.href = 'https://discordapp.com/api/oauth2/authorize?client_id=605097967887712257&permissions=8&scope=bot';" href="#"><span>Invite Me!</span></a>
-                <a type="button" onclick="window.location.href = 'https://discord.gg/qtqZCCf';" href="#"><span>Join My Server!</span></a>
+                <a type="button" onclick="window.location.href = 'https://discordapp.com/api/oauth2/authorize?client_id=605097967887712257&permissions=8&scope=bot';" href="#"><span>Invite Me</span></a>
+                <a type="button" onclick="window.location.href = 'https://discord.gg/qtqZCCf';" href="#"><span>Join My Server</span></a>
                 <p>BY Art#7834</p>
             </div>
             
