--- a/commands.html
+++ b/commands.html
@@ -13,13 +13,17 @@
     <div class="container">
         <div class="card">
             <div class="imgBx">
-                <img src="design.png">
+                <img src="server.png">
             </div>
             <div class="contentBx">
-                <h2>Server Commands</h2>
-                <p>               
-                List. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur neque laborum dignissimos repudiandae molestiae similique quos sit facere porro ipsam rerum, optio, adipisci perferendis, quam sequi molestias. Laboriosam, qui iusto?
-                </p>
+                <h2>Server Comands</h2>
+                <pre> </pre>
+                <p>/server</p>
+                <p>/ban @user</p>
+                <p>/kick @user</p>
+                <p>/invite create</p>
+                <p>/channel info</p>
+                <p>/purge [1-99]</p>
             </div>
         
         </div>
@@ -28,13 +32,15 @@
      <div class="container">
         <div class="card">
             <div class="imgBx">
-                <img src="design.png">
+                <img src="user.png">
             </div>
             <div class="contentBx">
                 <h2>User Data Commands</h2>
-                <p>               
-                List. Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores laborum libero, ab culpa commodi blanditiis consequuntur qui odio harum, distinctio praesentium! Ipsam tempore quidem explicabo earum fugiat harum soluta est.
-                </p>
+                <pre> </pre>
+                <p>/id @user</p>
+                <p>/info or /info @user</p>
+                <p>/made @user</p>
+                <p>/pfp @user</p>
             </div>
         </div>
     </div>
@@ -42,13 +48,30 @@
     <div class="container">
         <div class="card">
             <div class="imgBx">
-                <img src="design.png">
+                <img src="fun.png">
             </div>
             <div class="contentBx">
                 <h2>Fun Commands</h2>
-                <p>               
-                List. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex modi totam fugiat ratione impedit! Similique architecto amet asperiores cum. Sapiente saepe exercitationem laborum ad corrupti distinctio ratione cumque odit repellat?
-                </p>
+                <pre> </pre>
+                <p>/pat @user</p>
+                <p>/punch @user</p>
+                <p>/fuck @user</p>
+                <p>/kiss @user</p>
+                <p>/slap @user</p>
+                <p>/hug @user</p>
+                <p>/dog</p>
+                <p>/cat</p>
+                <p>/waifu</p>
+                <p>/ship @user or /ship @user @user</p>
+                <p>/slut or /slut @user</p>
+                <p>/dick or /dick @user</p>
+                <p>/simp or /simp @user</p>
+                <p>/game [1-10] [0-100]</p>
+                <p>/meme</p>
+                <p>/roll</p>
+                <p>kanye</p>
+                <p>/trump</p>
+                <p>/mock [text]</p>
             </div>
         </div>
     </div>
@@ -56,13 +79,23 @@
     <div class="container">
         <div class="card">
             <div class="imgBx">
-                <img src="design.png">
+                <img src="music.png">
             </div>
             <div class="contentBx">
                 <h2>Music Commands</h2>
-                <p>               
-                List. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias repudiandae aut perferendis magni, illum minus nemo, quaerat non facere atque temporibus animi ut ad corrupti cumque voluptas beatae sapiente nihil.
-                </p>
+                <pre> </pre>
+                <p>/play [name/link]</p>
+                <p>/pause</p>
+                <p>/play</p>
+                <p>/playing</p>
+                <p>/queue</p>
+                <p>/skip</p>
+                <p>/stop</p>
+                <p>/join</p>
+                <p>/spotify [song name]</p>
+                <p>/spotifymini [song name]</p>
+                <p>/album [album name]</p>
+                <p>/lyrics [song name]</p>
             </div>
         </div>
     </div>
@@ -70,13 +103,39 @@
     <div class="container">
         <div class="card">
             <div class="imgBx">
-                <img src="design.png">
+                <img src="anime.png">
+            </div>
+            <div class="contentBx">
+                <h2>Anime Commands</h2>
+                <pre> </pre>
+                <p>/anime [name]</p>
+                <p>/anime [day]</p>
+                <p>/anime season [year] [season]</p>
+                <p>/search [image]</p>
+                <p>/neko</p>
+                <p>/waifu</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="card">
+            <div class="imgBx">
+                <img src="dice.png">
             </div>
             <div class="contentBx">
                 <h2>Misc. Commands</h2>
-                <p>               
-                List. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur veritatis, possimus voluptate error vitae laborum, recusandae voluptatum quasi asperiores similique, itaque quos fuga doloribus eligendi? Iste, inventore quod? Dolore, atque?
-                </p>
+                <pre> </pre>
+                <p>/urban [item]</p>
+                <p>/save [text]</p>
+                <p>/gcd [int] [int]</p>
+                <p>/bez [int] [int]</p>
+                <p>/prime [int]</p>
+                <p>/photo</p>
+                <p>/corona</p>
+                <p>/send [channel name] [text]</p>
+                <p>/quote</p>
+                <p>/eb [text~text~text~text...]</p>
             </div>
         </div>
     </div>
