--- a/commands.html
+++ b/commands.html
@@ -53,15 +53,8 @@
             <div class="contentBx">
                 <h2>Fun Commands</h2>
                 <pre> </pre>
-                <p>/pat @user</p>
-                <p>/punch @user</p>
-                <p>/fuck @user</p>
-                <p>/kiss @user</p>
-                <p>/slap @user</p>
-                <p>/hug @user</p>
                 <p>/dog</p>
                 <p>/cat</p>
-                <p>/waifu</p>
                 <p>/ship @user or /ship @user @user</p>
                 <p>/slut or /slut @user</p>
                 <p>/dick or /dick @user</p>
@@ -71,6 +64,7 @@
                 <p>/roll</p>
                 <p>kanye</p>
                 <p>/trump</p>
+                <p>/fuck</p>
                 <p>/mock [text]</p>
             </div>
         </div>
@@ -114,6 +108,17 @@
                 <p>/search [image]</p>
                 <p>/neko</p>
                 <p>/waifu</p>
+                <p>/solo</p>
+                <p>/hentai</p>
+                <p>/pat @user</p>
+                <p>/punch @user</p>
+                <p>/kiss @user</p>
+                <p>/slap @user</p>
+                <p>/hug @user</p>
+                <p>/poke @user</p>
+                <p>/cuddle @user</p>
+                <p>/feed @user</p>
+                <p>/tickle @user</p>
             </div>
         </div>
     </div>
