--- a/commands.html
+++ b/commands.html
@@ -61,6 +61,8 @@
                 <p>/simp or /simp @user</p>
                 <p>/game [1-10] [0-100]</p>
                 <p>/meme</p>
+                <p>/fact</p>
+                <p>/8ball [text]</p>
                 <p>/roll</p>
                 <p>kanye</p>
                 <p>/trump</p>
@@ -108,7 +110,8 @@
                 <p>/search [image]</p>
                 <p>/neko</p>
                 <p>/waifu</p>
-                <p>/solo</p>
+                <p>/avatar</p>
+                <p>/lewd</p>
                 <p>/hentai</p>
                 <p>/pat @user</p>
                 <p>/punch @user</p>
