--- a/commands.html
+++ b/commands.html
@@ -24,6 +24,7 @@
                 <p>/invite create</p>
                 <p>/channel info</p>
                 <p>/purge [1-99]</p>
+                <p>/delete [1-99]</p>
             </div>
         
         </div>
@@ -134,6 +135,7 @@
             <div class="contentBx">
                 <h2>Misc. Commands</h2>
                 <pre> </pre>
+                <p>/movie [movie name]</p>
                 <p>/urban [item]</p>
                 <p>/save [text]</p>
                 <p>/gcd [int] [int]</p>
