--- a/commands.html
+++ b/commands.html
@@ -136,6 +136,7 @@
                 <h2>Misc. Commands</h2>
                 <pre> </pre>
                 <p>/movie [movie name]</p>
+                <p>/show [show name]</p>
                 <p>/urban [item]</p>
                 <p>/save [text]</p>
                 <p>/gcd [int] [int]</p>
