--- a/commands.html
+++ b/commands.html
@@ -86,8 +86,10 @@
                 <p>/play</p>
                 <p>/playing</p>
                 <p>/queue</p>
-                <p>/skip</p>
+                <p>/skip or /skip #</p>
                 <p>/stop</p>
+                <p>/replay</p>
+                <p>/seek ##:##</p>
                 <p>/join</p>
                 <p>/spotify [song name]</p>
                 <p>/spotifymini [song name]</p>
@@ -106,6 +108,7 @@
                 <h2>Anime Commands</h2>
                 <pre> </pre>
                 <p>/anime [name]</p>
+                <p>/animemini [name]</p>
                 <p>/anime [day]</p>
                 <p>/anime season [year] [season]</p>
                 <p>/search [image]</p>
