--- a/commands.html
+++ b/commands.html
@@ -16,15 +16,26 @@
                 <img src="server.png">
             </div>
             <div class="contentBx">
-                <h2>Server Comands</h2>
+                <h2>Bot Comands</h2>
                 <pre> </pre>
+                <p>/help</p>
                 <p>/server</p>
                 <p>/ban @user</p>
                 <p>/kick @user</p>
-                <p>/invite create</p>
-                <p>/channel info</p>
+                <p>/invite</p>
+                <p>/channel</p>
                 <p>/purge [1-99]</p>
                 <p>/delete [1-99]</p>
+                <p>/send [channel name] [text]</p>
+                <p>/ping</p>
+                <p>/id @user</p>
+                <p>/pfp @user</p>
+                <p>/id</p>
+                <p>/made</p>
+                <p>/info</p>
+                <p>/eb</p>
+                <p>/shutdown</p>
+                
             </div>
         
         </div>
@@ -54,6 +65,8 @@
             <div class="contentBx">
                 <h2>Fun Commands</h2>
                 <pre> </pre>
+                <p>/tictactoe @user</p>
+                <p>/trivia @user</p>
                 <p>/dog</p>
                 <p>/cat</p>
                 <p>/ship @user or /ship @user @user</p>
@@ -65,7 +78,7 @@
                 <p>/fact</p>
                 <p>/8ball [text]</p>
                 <p>/roll</p>
-                <p>kanye</p>
+                <p>/kanye</p>
                 <p>/trump</p>
                 <p>/fuck</p>
                 <p>/mock [text]</p>
@@ -108,13 +121,13 @@
                 <h2>Anime Commands</h2>
                 <pre> </pre>
                 <p>/anime [name]</p>
-                <p>/animemini [name]</p>
-                <p>/anime [day]</p>
+                <p>/anime mini [name]</p>
+                <p>/anime weekly [day]</p>
                 <p>/anime season [year] [season]</p>
-                <p>/search [image]</p>
+                <p>/anime search [image]</p>
+                <p>/anime search mini [image]</p>
                 <p>/neko</p>
                 <p>/waifu</p>
-                <p>/avatar</p>
                 <p>/lewd</p>
                 <p>/hentai</p>
                 <p>/pat @user</p>
@@ -142,14 +155,8 @@
                 <p>/show [show name]</p>
                 <p>/urban [item]</p>
                 <p>/save [text]</p>
-                <p>/gcd [int] [int]</p>
-                <p>/bez [int] [int]</p>
-                <p>/prime [int]</p>
                 <p>/photo</p>
                 <p>/corona</p>
-                <p>/send [channel name] [text]</p>
-                <p>/quote</p>
-                <p>/eb [text~text~text~text...]</p>
             </div>
         </div>
     </div>
