--- a/commands.html
+++ b/commands.html
@@ -51,6 +51,9 @@
                 <pre> </pre>
                 <p>/tictactoe @user</p>
                 <p>/trivia @user</p>
+                <p>/trivia leaderboard</p>
+                <p>/trivia global leaderboard</p>
+                <p>/trivia score</p>
                 <p>/dog</p>
                 <p>/cat</p>
                 <p>/ship @user or /ship @user @user</p>
