--- a/commands.html
+++ b/commands.html
@@ -16,7 +16,7 @@
                 <img src="server.png">
             </div>
             <div class="contentBx">
-                <h2>Bot Comands</h2>
+                <h2>Server/Bot Comands</h2>
                 <pre> </pre>
                 <p>/help</p>
                 <p>/server</p>
@@ -34,6 +34,8 @@
                 <p>/made</p>
                 <p>/info</p>
                 <p>/eb</p>
+                <p>/suggest</p>
+                <p>/mcserver [mc server ip]</p>
                 <p>/shutdown</p>
                 
             </div>
