--- a/commands.html
+++ b/commands.html
@@ -146,6 +146,7 @@
                 <p>/photo</p>
                 <p>/corona</p>
                 <p>/mcserver [mc server ip]</p>
+                <p>/mcuser [username]</p>
             </div>
         </div>
     </div>
