--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="card">
+    <div class="container2">
+        <div class="card2">
             
-            <div class="contentBx">
+            <div class="contentBx2">
                <h2>About Arty Bot</h2>
                <p>
 
