--- a/commands.html
+++ b/commands.html
@@ -139,6 +139,7 @@
                 <p><abbr aria-label="returns movie data">/movie [movie name]</abbr></p>
                 <p><abbr aria-label="returns show data">/show [show name]</abbr></p>
                 <p><abbr aria-label="Returns now weather data">/weather [city] [country]</abbr></p>
+                <p><abbr aria-label="Returns latest news from country">/news [country]</abbr></p>
                 <p><abbr aria-label="Returns urban dict def of thing">/urban [thing]</abbr></p>
                 <p><abbr aria-label="saves [text]">/save [text]</abbr></p>
                 <p><abbr aria-label="Returns a photo">/photo</abbr></p>
