--- a/commands.html
+++ b/commands.html
@@ -68,6 +68,7 @@
                 <p><abbr aria-label="Returns a quote by Trump">/trump</abbr></p>
                 <p><abbr aria-label="Returns a sexual gif">/fuck @user</abbr></p>
                 <p><abbr aria-label="Stylizes [text]">/mock [text]</abbr></p>
+                <p><abbr aria-label="Stylizes [text]">/yoda [text]</abbr></p>
             </div>
         </div>
     </div>
