--- a/commands.html
+++ b/commands.html
@@ -57,7 +57,7 @@
                 <p><abbr aria-label="Returns a doggo">/dog</abbr></p>
                 <p><abbr aria-label="Returns a cat ">/cat</abbr></p>
                 <p><abbr aria-label="ships users">/ship @user or /ship @user @user</abbr></p>
-                <p><abbr aria-label="Returns slut percentage">/slut or /slut @user</abbr></p>
+             /*   <p><abbr aria-label="Returns slut percentage">/slut or /slut @user</abbr></p> */
                 <p><abbr aria-label="Returns pp size">/dick or /dick @user</abbr></p>
                 <p><abbr aria-label="Returns simp percentage">/simp or /simp @user</abbr></p>
                 <p><abbr aria-label="Returns a minesweeper game">/game [1-10] [0-100]</abbr></p>
@@ -67,7 +67,7 @@
                 <p><abbr aria-label="Returns a number from [1-6]">/roll</abbr></p>
                 <p><abbr aria-label="Returns a quote by Kanye">/kanye</abbr></p>
                 <p><abbr aria-label="Returns a quote by Trump">/trump</abbr></p>
-                <p><abbr aria-label="Returns a sexual gif">/fuck @user</abbr></p>
+      /*          <p><abbr aria-label="Returns a sexual gif">/fuck @user</abbr></p>  */
                 <p><abbr aria-label="Stylizes [text]">/mock [text]</abbr></p>
                 <p><abbr aria-label="Stylizes [text]">/yoda [text]</abbr></p>
             </div>
@@ -82,6 +82,7 @@
             <div class="contentBx">
                 <h2>Music Commands</h2>
                 <pre> </pre>
+                <p>Music Commands may be removed soon.</p>
                 <p><abbr aria-label="Queues song">/play [name/link]</abbr></p>
                 <p><abbr aria-label="Pauses song">/pause</abbr></p>
                 <p><abbr aria-label="Returns playing song info">/playing</abbr></p>
@@ -115,8 +116,8 @@
                 <p><abbr aria-label="Searches [image], returns less info">/anime search mini [image]</abbr></p>
                 <p><abbr aria-label="Returns a catgirl">/neko</abbr></p>
                 <p><abbr aria-label="Returns a waifu">/waifu</abbr></p>
-                <p><abbr aria-label="Returns a lewd">/lewd</abbr></p>
-                <p><abbr aria-label="Returns hentai">/hentai</abbr></p>
+        /*        <p><abbr aria-label="Returns a lewd">/lewd</abbr></p> */
+        /*        <p><abbr aria-label="Returns hentai">/hentai</abbr></p> */
                 <p><abbr aria-label="Returns a gif">/pat @user</abbr></p>
                 <p><abbr aria-label="Returns a gif">/punch @user</abbr></p>
                 <p><abbr aria-label="Returns a gif">/kiss @user</abbr></p>
