--- a/commands.html
+++ b/commands.html
@@ -58,8 +58,8 @@
                 <p><abbr aria-label="Returns a cat ">/cat</abbr></p>
                 <p><abbr aria-label="ships users">/ship @user or /ship @user @user</abbr></p>
              //   <p><abbr aria-label="Returns slut percentage">/slut or /slut @user</abbr></p> 
-                <p><abbr aria-label="Returns pp size">/dick or /dick @user</abbr></p>
-                <p><abbr aria-label="Returns simp percentage">/simp or /simp @user</abbr></p>
+             //   <p><abbr aria-label="Returns pp size">/dick or /dick @user</abbr></p>
+             //   <p><abbr aria-label="Returns simp percentage">/simp or /simp @user</abbr></p>
                 <p><abbr aria-label="Returns a minesweeper game">/game [1-10] [0-100]</abbr></p>
                 <p><abbr aria-label="Returns a meme from reddit">/meme</abbr></p>
                 <p><abbr aria-label="Returns a random fact">/fact</abbr></p>
