--- a/commands.html
+++ b/commands.html
@@ -91,7 +91,7 @@
                 <p><abbr aria-label="Returns song information">/spotify [song name]</abbr></p>
                 <p><abbr aria-label="Returns less song information">/spotifymini [song name]</abbr></p>
                 <p><abbr aria-label="Returns album info">/album [album name]</abbr></p>
-                <p><abbr aria-label="Returns song lyrics">/lyrics [song name]</abbr></p>
+                <p><abbr aria-label="Returns song lyrics">/lyrics [song name] *broken</abbr></p>
             </div>
         </div>
     </div>
