--- a/commands.html
+++ b/commands.html
@@ -26,7 +26,7 @@
                 <p><abbr aria-label="Kicks a user. Usage /kick @user">/kick @user</abbr></p>
                 <p><abbr aria-label="Creates an invite link to server">/invite</abbr></p>
                 <p><abbr aria-label="Returns channel information">/channel</abbr></p>
-                <p><abbr aria-label="purges [1-99] texts from channel">/purge</abbr></p>
+                <p><abbr aria-label="Purges [1-99] texts from channel">/purge</abbr></p>
                 <p><abbr aria-label="Deletes [1-99] self messages ">/delete</abbr></p>
                 <p><abbr aria-label="Sends [channel] [message]">/send [channel]</abbr></p>
                 <p><abbr aria-label="Returns bot connection">/ping</abbr></p>
@@ -58,13 +58,17 @@
                 <p><abbr aria-label="Returns a doggo">/dog</abbr></p>
                 <p><abbr aria-label="Returns a cat ">/cat</abbr></p>
                 <p><abbr aria-label="ships users">/ship @user or /ship @user @user</abbr></p>
-                <p><abbr aria-label="Returns a minesweeper game">/game [1-10] [0-100]</abbr></p>
+                <p><abbr aria-label="Returns slut percentage">/slut or /slut @user</abbr></p> 
+                <p><abbr aria-label="Returns pp size">/dick or /dick @user</abbr></p>
+                <p><abbr aria-label="Returns simp percentage">/simp or /simp @user</abbr></p>
+                <p><abbr aria-label="Returns a minesweeper game [broken]">/game [1-10] [0-100]</abbr></p>
                 <p><abbr aria-label="Returns a meme from reddit">/meme</abbr></p>
                 <p><abbr aria-label="Returns a random fact">/fact</abbr></p>
                 <p><abbr aria-label="Returns an answer">/8ball</abbr></p>
                 <p><abbr aria-label="Returns a number from [1-6]">/roll</abbr></p>
                 <p><abbr aria-label="Returns a quote by Kanye">/kanye</abbr></p>
                 <p><abbr aria-label="Returns a quote by Trump">/trump</abbr></p>
+                <p><abbr aria-label="Returns a sexual gif">/fuck @user</abbr></p>  
                 <p><abbr aria-label="Stylizes [text]">/mock [text]</abbr></p>
                 <p><abbr aria-label="Stylizes [text]">/yoda [text]</abbr></p>
             </div>
@@ -92,7 +96,7 @@
                 <p><abbr aria-label="Returns song information">/spotify [song name]</abbr></p>
                 <p><abbr aria-label="Returns less song information">/spotifymini [song name]</abbr></p>
                 <p><abbr aria-label="Returns album info">/album [album name]</abbr></p>
-                <p><abbr aria-label="Returns song lyrics">/lyrics [song name] *broken</abbr></p>
+                <p><abbr aria-label="Returns song lyrics [broken]">/lyrics [song name]</abbr></p>
             </div>
         </div>
     </div>
@@ -113,6 +117,8 @@
                 <p><abbr aria-label="Searches [image], returns less info">/anime search mini [image]</abbr></p>
                 <p><abbr aria-label="Returns a catgirl">/neko</abbr></p>
                 <p><abbr aria-label="Returns a waifu">/waifu</abbr></p>
+                <p><abbr aria-label="Returns a lewd">/lewd</abbr></p> */
+                <p><abbr aria-label="Returns hentai">/hentai</abbr></p> */
                 <p><abbr aria-label="Returns a gif">/pat @user</abbr></p>
                 <p><abbr aria-label="Returns a gif">/punch @user</abbr></p>
                 <p><abbr aria-label="Returns a gif">/kiss @user</abbr></p>
