Updated logo on home page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="card">
             <div class="imgBx">
-                <img src="design.png">
+                <img src="art.png">
             </div>
             <div class="contentBx">
                 <h2>Arty Bot</h2>
