--- a/commands.html
+++ b/commands.html
@@ -117,8 +117,8 @@
                 <p><abbr aria-label="Searches [image], returns less info">/anime search mini [image]</abbr></p>
                 <p><abbr aria-label="Returns a catgirl">/neko</abbr></p>
                 <p><abbr aria-label="Returns a waifu">/waifu</abbr></p>
-                <p><abbr aria-label="Returns a lewd">/lewd</abbr></p> */
-                <p><abbr aria-label="Returns hentai">/hentai</abbr></p> */
+                <p><abbr aria-label="Returns a lewd">/lewd</abbr></p> 
+                <p><abbr aria-label="Returns hentai">/hentai</abbr></p> 
                 <p><abbr aria-label="Returns a gif">/pat @user</abbr></p>
                 <p><abbr aria-label="Returns a gif">/punch @user</abbr></p>
                 <p><abbr aria-label="Returns a gif">/kiss @user</abbr></p>
