--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="container">
         <div class="card">
             <div class="imgBx">
-                <img src="art.png">
+                <img src="design.png">
             </div>
             <div class="contentBx">
                 <h2>Arty Bot</h2>
                 <p>               
-                    Arty bot is a command rich multipurpose Discord bot with no specific purpose. Made by @Art#7834</p>
+                    Arty bot is a command rich multipurpose Discord bot with no specific purpose. Made by @Art#0004</p>
                 
                 <a type="button" onclick="window.location.href = 'https://discord.gg/qtqZCCf';" href="#"><span>Join My Server</span></a>
                 <a type="button" onclick="window.location.href = 'https://discordapp.com/api/oauth2/authorize?client_id=605097967887712257&permissions=8&scope=bot';" href="#"><span>Invite Me To Yours</span></a>
