--- a/commands.html
+++ b/commands.html
@@ -147,6 +147,9 @@
                 <p><abbr aria-label="Returns urban dict def of thing">/urban [thing]</abbr></p>
                 <p><abbr aria-label="saves [text]">/save [text]</abbr></p>
                 <p><abbr aria-label="Returns a photo">/photo</abbr></p>
+                <p><abbr aria-label="returns a photo from r/nsfw">/porn</abbr></p>
+                <p><abbr aria-label="returns a photo from r/boobies">/boobs [movie name]</abbr></p>
+                <p><abbr aria-label="returns a photo from r/wtf">/wtf</abbr></p>
                 <p><abbr aria-label="Returns global covid stats">/corona</abbr></p>
                 <p><abbr aria-label="Returns server info">/mcserver [mc server ip]</abbr></p>
                 <p><abbr aria-label="Returns user info">/mcuser [username]</abbr></p>
