--- a/commands.html
+++ b/commands.html
@@ -148,7 +148,7 @@
                 <p><abbr aria-label="saves [text]">/save [text]</abbr></p>
                 <p><abbr aria-label="Returns a photo">/photo</abbr></p>
                 <p><abbr aria-label="returns a photo from r/nsfw">/porn</abbr></p>
-                <p><abbr aria-label="returns a photo from r/boobies">/boobs [movie name]</abbr></p>
+                <p><abbr aria-label="returns a photo from r/boobies">/boobs</abbr></p>
                 <p><abbr aria-label="returns a photo from r/wtf">/wtf</abbr></p>
                 <p><abbr aria-label="Returns global covid stats">/corona</abbr></p>
                 <p><abbr aria-label="Returns server info">/mcserver [mc server ip]</abbr></p>
