--- a/commands.html
+++ b/commands.html
@@ -54,6 +54,7 @@
                 <p><abbr aria-label="Returns guild trivia lb">/trivia leaderboard</abbr></p>
                 <p><abbr aria-label="Returns global trivia lb">/trivia global leaderboard</abbr></p>
                 <p><abbr aria-label="Returns your trivia score">/trivia score</abbr></p>
+                <p><abbr aria-label="Returns a wouldYouRather Question">/wyr</abbr></p>
                 <p><abbr aria-label="Returns a joke">/joke</abbr></p>
                 <p><abbr aria-label="Returns a doggo">/dog</abbr></p>
                 <p><abbr aria-label="Returns a cat ">/cat</abbr></p>
