--- a/commands.html
+++ b/commands.html
@@ -110,6 +110,7 @@
             <div class="contentBx">
                 <h2>Anime Commands</h2>
                 <pre> </pre>
+                <pre> MAL is being a POS and so some anime commands will not work until MAL stops being a POS (They've blocked the Api I use)</pre>
                 <p><abbr aria-label="Returns anime info">/anime [name]</abbr></p>
                 <p><abbr aria-label="Returns less animedata">/anime mini [name]</abbr></p>
                 <p><abbr aria-label="Returns the anime out on [day]">/anime weekly [day]</abbr></p>
