--- a/commands.html
+++ b/commands.html
@@ -148,6 +148,7 @@
                 <p><abbr aria-label="Returns latest news from country">/news [country code]</abbr></p>
                 <p><abbr aria-label="Returns urban dict def of thing">/urban [thing]</abbr></p>
                 <p><abbr aria-label="saves [text]">/save [text]</abbr></p>
+                <p><abbr aria-label="Creates a simple poll">/poll [text]</p>
                 <p><abbr aria-label="Returns a photo">/photo</abbr></p>
                 <p><abbr aria-label="returns a photo from r/nsfw">/porn</abbr></p>
                 <p><abbr aria-label="returns a photo from r/boobies">/boobs</abbr></p>
