--- a/commands.html
+++ b/commands.html
@@ -20,6 +20,7 @@
                 <pre> </pre>
                 
                 <p><abbr aria-label="Links the bot website">/help</abbr></p>
+                <p><abbr aria-label="Gets latest bot updates">/update</abbr></p>
                 <p><abbr aria-label="Returns the bot's uptime">/uptime</abbr></p>
                 <p><abbr aria-label="Returns server info">/server</abbr></p>
                 <p><abbr aria-label="Bans a user. Usage /ban @user">/ban @user</abbr></p>
