Added /corona [country]

--- a/commands.html
+++ b/commands.html
@@ -155,6 +155,7 @@
                 <p><abbr aria-label="returns a photo from r/boobies">/boobs</abbr></p>
                 <p><abbr aria-label="returns a photo from r/wtf">/wtf</abbr></p>
                 <p><abbr aria-label="Returns global covid stats">/corona</abbr></p>
+                <p><abbr aria-label="Returns country covid stats">/corona [country name]</abbr></p>
                 <p><abbr aria-label="Returns server info">/mcserver [mc server ip]</abbr></p>
                 <p><abbr aria-label="Returns user info">/mcuser [username]</abbr></p>
             </div>
