Updated anime cmnds

--- a/commands.html
+++ b/commands.html
@@ -117,7 +117,7 @@
                 <p><abbr aria-label="Returns the anime out on [day]">/anime weekly [day]</abbr></p>
                 <p><abbr aria-label="Returns anime out in [year] [season]">/anime season [year] [season]</abbr></p>
                 <p><abbr aria-label="Searches [image], returns info">/anime search [image]</abbr></p>
-                <p><abbr aria-label="Searches [image], returns less info">/anime search mini [image]</abbr></p>
+                <p><abbr aria-label="Searches [image], returns less info">/anime search quick [image]</abbr></p>
                 <p><abbr aria-label="Returns a catgirl">/neko</abbr></p>
                 <p><abbr aria-label="Returns a waifu">/waifu</abbr></p>
                 <p><abbr aria-label="Returns a lewd">/lewd</abbr></p> 
