--- a/commands.html
+++ b/commands.html
@@ -28,7 +28,7 @@
                 <p><abbr aria-label="Creates an invite link to server">/invite</abbr></p>
                 <p><abbr aria-label="Returns channel information">/channel</abbr></p>
                 <p><abbr aria-label="Purges [1-99] texts from channel">/purge</abbr></p>
-                <p><abbr aria-label="Deletes [1-99] self messages ">/delete</abbr></p>
+                <p><abbr aria-label="Purges [1-99] self messages ">/selfpurge</abbr></p>
                 <p><abbr aria-label="Sends [channel] [message]">/send [channel]</abbr></p>
                 <p><abbr aria-label="Returns bot connection">/ping</abbr></p>
                 <p><abbr aria-label="Returns user's ID. Usage /id @user">/id</abbr></p>
