Added /owo to owoify [text]

--- a/commands.html
+++ b/commands.html
@@ -73,6 +73,7 @@
                 <p><abbr aria-label="Returns a sexual gif">/fuck @user</abbr></p>  
                 <p><abbr aria-label="Stylizes [text]">/mock [text]</abbr></p>
                 <p><abbr aria-label="Stylizes [text]">/yoda [text]</abbr></p>
+                <p><abbr aria-label="Stylizes [text]">/owo [text]</abbr></p>
             </div>
         </div>
     </div>
