--- a/commands.html
+++ b/commands.html
@@ -149,6 +149,7 @@
                 <p><abbr aria-label="Returns a photo">/photo</abbr></p>
                 <p><abbr aria-label="returns a photo from r/nsfw">/porn</abbr></p>
                 <p><abbr aria-label="returns a photo from r/boobies">/boobs</abbr></p>
+                 <p><abbr aria-label="returns a photo from r/ass">/ass</abbr></p>
                 <p><abbr aria-label="returns a photo from r/wtf">/wtf</abbr></p>
                 <p><abbr aria-label="Returns global covid stats">/corona</abbr></p>
                 <p><abbr aria-label="Returns country covid stats">/corona [country name]</abbr></p>
