--- a/commands.html
+++ b/commands.html
@@ -48,9 +48,11 @@
                 <img src="fun.png">
             </div>
             <div class="contentBx">
-                <h2>Fun Commands</h2>
+                <h2>Fun/Games Commands</h2>
                 <pre> </pre>
                 <p><abbr aria-label="Creates a Tictactoe game">/tictactoe @user</abbr></p>
+                <p><abbr aria-label="Creates a Chess game">/chess @user</abbr></p>
+                <p><abbr aria-label="Creates a RockPaperScissors game">/rps</abbr></p>
                 <p><abbr aria-label="Creates a trivia game">/trivia</abbr></p>
                 <p><abbr aria-label="Returns guild trivia lb">/trivia leaderboard</abbr></p>
                 <p><abbr aria-label="Returns global trivia lb">/trivia global leaderboard</abbr></p>
