--- a/commands.html
+++ b/commands.html
@@ -52,6 +52,7 @@
                 <pre> </pre>
                 <p><abbr aria-label="Creates a Tictactoe game">/tictactoe @user</abbr></p>
                 <p><abbr aria-label="Creates a Chess game">/chess @user</abbr></p>
+                <p><abbr aria-label="Creates a Connect 4 game">/connect4 @user</abbr></p>
                 <p><abbr aria-label="Creates a RockPaperScissors game">/rps</abbr></p>
                 <p><abbr aria-label="Creates a trivia game">/trivia</abbr></p>
                 <p><abbr aria-label="Returns guild trivia lb">/trivia leaderboard</abbr></p>
