Added a new commands subset/category

--- a/commands.html
+++ b/commands.html
@@ -156,6 +156,22 @@
                 <p><abbr aria-label="returns a photo from r/wtf">/wtf</abbr></p>
                 <p><abbr aria-label="Returns global covid stats">/corona</abbr></p>
                 <p><abbr aria-label="Returns country covid stats">/corona [country name]</abbr></p>
+            </div>
+        </div>
+    </div>
+
+<div class="container">
+        <div class="card">
+            <div class="imgBx">
+                <img src="minecraft.png">
+            </div>
+            <div class="contentBx">
+                <h2>Minecraft Commands</h2>
+                <pre> </pre>
+                <p><abbr aria-label="returns hypixel user data">/hypixel [username]</abbr></p>
+                <p><abbr aria-label="returns hypixel user sw data">/hypixel sw [username]</abbr></p>
+                <p><abbr aria-label="returns hypixel user bw data">/hypixel bw [username]</abbr></p>
+                <p><abbr aria-label="returns hypixel user session data">/hypixel session [username]</abbr></p>
                 <p><abbr aria-label="Returns server info">/mcserver [mc server ip]</abbr></p>
                 <p><abbr aria-label="Returns user info">/mcuser [username]</abbr></p>
             </div>
