--- a/commands.html
+++ b/commands.html
@@ -48,7 +48,7 @@
                 <img src="fun.png">
             </div>
             <div class="contentBx">
-                <h2>Fun/Games Commands</h2>
+                <h2>Fun Commands</h2>
                 <pre> </pre>
                 <p><abbr aria-label="Creates a Tictactoe game">/tictactoe @user</abbr></p>
                 <p><abbr aria-label="Creates a Chess game">/chess @user</abbr></p>
