--- a/commands.html
+++ b/commands.html
@@ -166,7 +166,7 @@
                 <img src="minecraft.png">
             </div>
             <div class="contentBx">
-                <h2>Minecraft Commands</h2>
+                <h2>MC. Commands</h2>
                 <pre> </pre>
                 <p><abbr aria-label="returns hypixel user data">/hypixel [username]</abbr></p>
                 <p><abbr aria-label="returns hypixel user sw data">/hypixel sw [username]</abbr></p>
