--- a/commands.html
+++ b/commands.html
@@ -66,7 +66,7 @@
                 <p><abbr aria-label="Returns slut percentage">/slut or /slut @user</abbr></p> 
                 <p><abbr aria-label="Returns pp size">/dick or /dick @user</abbr></p>
                 <p><abbr aria-label="Returns simp percentage">/simp or /simp @user</abbr></p>
-                <p><abbr aria-label="Returns a minesweeper game [broken]">/minesweeper [1-10] [0-100]</abbr></p>
+                <p><abbr aria-label="Returns a minesweeper game">/minesweeper [1-10] [0-100]</abbr></p>
                 <p><abbr aria-label="Returns a meme from reddit">/meme</abbr></p>
                 <p><abbr aria-label="Returns a random fact">/fact</abbr></p>
                 <p><abbr aria-label="Returns an answer">/8ball</abbr></p>
