--- a/commands.html
+++ b/commands.html
@@ -146,6 +146,7 @@
                 <p><abbr aria-label="returns show data">/show [show name]</abbr></p>
                 <p><abbr aria-label="Returns now weather data">/weather [city] [country code]</abbr></p>
                 <p><abbr aria-label="Returns latest news from country">/news [country code]</abbr></p>
+                <p><abbr aria-label="Returns LOL user info">/league [username]</abbr></p>
                 <p><abbr aria-label="Returns urban dict def of thing">/urban [thing]</abbr></p>
                 <p><abbr aria-label="saves [text]">/save [text]</abbr></p>
                 <p><abbr aria-label="Creates a simple poll">/poll [text]</p>
