--- a/commands.html
+++ b/commands.html
@@ -142,19 +142,20 @@
             <div class="contentBx">
                 <h2>Misc. Commands</h2>
                 <pre> </pre>
-                <p><abbr aria-label="returns movie data">/movie [movie name]</abbr></p>
-                <p><abbr aria-label="returns show data">/show [show name]</abbr></p>
+                <p><abbr aria-label="Answers your question">/ask [query]</abbr></p>
+                <p><abbr aria-label="Returns movie data">/movie [movie name]</abbr></p>
+                <p><abbr aria-label="Returns show data">/show [show name]</abbr></p>
                 <p><abbr aria-label="Returns now weather data">/weather [city] [country code]</abbr></p>
                 <p><abbr aria-label="Returns latest news from country">/news [country code]</abbr></p>
                 <p><abbr aria-label="Returns LOL user info">/league [username]</abbr></p>
                 <p><abbr aria-label="Returns urban dict def of thing">/urban [thing]</abbr></p>
-                <p><abbr aria-label="saves [text]">/save [text]</abbr></p>
+                <p><abbr aria-label="Saves [text]">/save [text]</abbr></p>
                 <p><abbr aria-label="Creates a simple poll">/poll [text]</p>
                 <p><abbr aria-label="Returns a photo">/photo</abbr></p>
-                <p><abbr aria-label="returns a photo from r/nsfw">/porn</abbr></p>
-                <p><abbr aria-label="returns a photo from r/boobies">/boobs</abbr></p>
-                 <p><abbr aria-label="returns a photo from r/ass">/ass</abbr></p>
-                <p><abbr aria-label="returns a photo from r/wtf">/wtf</abbr></p>
+                <p><abbr aria-label="Returns a photo from r/nsfw">/porn</abbr></p>
+                <p><abbr aria-label="Returns a photo from r/boobies">/boobs</abbr></p>
+                 <p><abbr aria-label="Returns a photo from r/ass">/ass</abbr></p>
+                <p><abbr aria-label="Returns a photo from r/wtf">/wtf</abbr></p>
                 <p><abbr aria-label="Returns global covid stats">/corona</abbr></p>
                 <p><abbr aria-label="Returns country covid stats">/corona [country name]</abbr></p>
             </div>
