--- a/commands.html
+++ b/commands.html
@@ -153,7 +153,7 @@
                 <p><abbr aria-label="Creates a simple poll">/poll [text]</p>
                 <p><abbr aria-label="Returns a photo">/photo</abbr></p>
                 <p><abbr aria-label="Returns a photo from r/greentext">/4chan</abbr></p>
-                <p><abbr aria-label="Returns a photo from r/nsfw_gif">/porn</abbr></p>
+                <p><abbr aria-label="Returns a photo from r/nsfw">/porn</abbr></p>
                 <p><abbr aria-label="Returns a photo from r/boobies">/boobs</abbr></p>
                  <p><abbr aria-label="Returns a photo from r/ass">/ass</abbr></p>
                 <p><abbr aria-label="Returns a photo from r/wtf">/wtf</abbr></p>
