--- a/commands.html
+++ b/commands.html
@@ -143,6 +143,7 @@
                 <h2>Misc. Commands</h2>
                 <pre> </pre>
                 <p><abbr aria-label="Answers your question">/ask [query]</abbr></p>
+                <p><abbr aria-label="Bot 'talks' to you">/talk [query]</abbr></p>
                 <p><abbr aria-label="Returns movie data">/movie [movie name]</abbr></p>
                 <p><abbr aria-label="Returns show data">/show [show name]</abbr></p>
                 <p><abbr aria-label="Returns now weather data">/weather [city] [country code]</abbr></p>
