--- a/commands.html
+++ b/commands.html
@@ -23,6 +23,7 @@
                 <p><abbr aria-label="Gets latest bot updates">/update</abbr></p>
                 <p><abbr aria-label="Returns the bot's uptime">/uptime</abbr></p>
                 <p><abbr aria-label="Returns server info">/server</abbr></p>
+                <p><abbr aria-label="Returns the emote's link">/emote [emote]</abbr></p>
                 <p><abbr aria-label="Bans a user. Usage /ban @user">/ban @user</abbr></p>
                 <p><abbr aria-label="Kicks a user. Usage /kick @user">/kick @user</abbr></p>
                 <p><abbr aria-label="Creates an invite link to server">/invite</abbr></p>
