--- a/commands.html
+++ b/commands.html
@@ -1,4 +1,4 @@
-
+l
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -93,6 +93,9 @@
                 <p>Music Commands may be removed soon.</p>
                 <p><abbr aria-label="Queues song">/play [name/link]</abbr></p>
                 <p><abbr aria-label="Pauses song">/pause</abbr></p>
+                <p><abbr aria-label="Sets player volume [0-100]">/volume [int]</abbr></p>
+                <p><abbr aria-label="Returns song lyrics">/lyrics [song name]</abbr></p>
+                <p><abbr aria-label="Returns playing song lyrics">/lyrics</abbr></p>
                 <p><abbr aria-label="Returns playing song info">/playing</abbr></p>
                 <p><abbr aria-label="Returns current Queue">/queue</abbr></p>
                 <p><abbr aria-label="Skips 1 or # songs">/skip or /skip #</abbr></p>
@@ -103,7 +106,6 @@
                 <p><abbr aria-label="Returns song information">/spotify [song name]</abbr></p>
                 <p><abbr aria-label="Returns less song information">/spotifymini [song name]</abbr></p>
                 <p><abbr aria-label="Returns album info">/album [album name]</abbr></p>
-                <p><abbr aria-label="Returns song lyrics [broken]">/lyrics [song name]</abbr></p>
             </div>
         </div>
     </div>
