--- a/commands.html
+++ b/commands.html
@@ -94,7 +94,7 @@ l
                 <p><abbr aria-label="Queues song">/play [name/link]</abbr></p>
                 <p><abbr aria-label="Pauses song">/pause</abbr></p>
                 <p><abbr aria-label="Sets player volume [0-100]">/volume [int]</abbr></p>
-                <p><abbr aria-label="Returns song lyrics">/lyrics [song name]</abbr></p>
+                <p><abbr aria-label="Returns song lyrics">/lyrics [song name] or /lyrics</abbr></p>
                 <p><abbr aria-label="Returns playing song lyrics">/lyrics</abbr></p>
                 <p><abbr aria-label="Returns playing song info">/playing</abbr></p>
                 <p><abbr aria-label="Returns current Queue">/queue</abbr></p>
