--- a/commands.html
+++ b/commands.html
@@ -123,6 +123,7 @@ l
                 <p><abbr aria-label="Returns anime out in [year] [season]">/anime season [year] [season]</abbr></p>
                 <p><abbr aria-label="Searches [image], returns info">/anime search [image]</abbr></p>
                 <p><abbr aria-label="Searches [image], returns less info">/anime search quick [image]</abbr></p>
+                <p><abbr aria-label="Returns anime news">/animeNews [name]</abbr></p>
                 <p><abbr aria-label="Returns a waifu">/waifu</abbr></p>
                 <p><abbr aria-label="Returns a lewd">/lewd</abbr></p>
                 <p><abbr aria-label="Returns hentai">/hentai</abbr></p>
